# multibot3

./: .clang-format  .gitignore  LICENSE  README.md
mapf/: CMakeLists.txt  README.md  RESEARCH.md
mapf/config/maps/: corridor.yaml  grid_4x4.yaml  ring_24.yaml  square.yaml  warehouse_5x4.yaml
mapf/config/params/: default.yaml
mapf/config/scenarios/lifelong/: corridor.yaml  corridor_n4.yaml  corridor_n6.yaml  corridor_n8.yaml  grid_4x4.yaml  ring_24.yaml  square.yaml  warehouse_5x4.yaml
mapf/config/scenarios/single_shot/: corridor.yaml  corridor_n4.yaml  corridor_n6.yaml  corridor_n8.yaml  grid_4x4.yaml  ring_24.yaml  square.yaml  warehouse_5x4.yaml
mapf/include/: collision.hpp  config_loader.hpp  dist_table.hpp  goal_distance_cache.hpp  graph.hpp  graph_preprocessor.hpp  lifelong_planner.hpp  lifelong_types.hpp  logger.hpp  map_loader.hpp  mapf_runtime.hpp  params.hpp  pibt.hpp  planner.hpp  planning_types.hpp  prepared_map.hpp  reservation_table.hpp  scenario_loader.hpp  solution.hpp  solution_validation.hpp  stop_condition.hpp
mapf/schema/: lifelong-scenario.schema.json
mapf/src/: collision.cpp  config_loader.cpp  dist_table.cpp  goal_distance_cache.cpp  graph.cpp  graph_preprocessor.cpp  lifelong_planner.cpp  logger.cpp  map_loader.cpp  mapf_runtime.cpp  params.cpp  pibt.cpp  planner.cpp  planning_request.hpp  prepared_map.cpp  reservation_table.cpp  scenario_loader.cpp  solution.cpp  solution_validation.cpp  stop_condition.cpp
mapf/test/: cli_env.hpp  lifelong_smoke_test.cpp  regression_tests.cpp  smoke_test.cpp  test_harness.hpp  unit_tests.cpp
mapf/tools/: visualize.py
sadg/: CMakeLists.txt
sadg/include/: sadg_builder.hpp  sadg_graph.hpp  sadg_scheduler.hpp  sadg_types.hpp  sadg_validator.hpp
sadg/src/: sadg_builder.cpp  sadg_graph.cpp  sadg_scheduler.cpp  sadg_validator.cpp
sadg/test/: sadg_unit_tests.cpp
src/assembly/mrs_analysis/: package.xml  setup.cfg  setup.py
src/assembly/mrs_analysis/mrs_analysis/: metrics_pipeline.py
src/assembly/mrs_analysis/test/: test_placeholder.py
src/assembly/mrs_bench/: CMakeLists.txt  package.xml
src/assembly/mrs_bench/include/mrs_bench/: bench_runner_node.hpp
src/assembly/mrs_bench/src/: bench_runner_node.cpp  main.cpp
src/assembly/mrs_bringup/: CMakeLists.txt  package.xml
src/assembly/mrs_bringup/config/: README.md  pysim.params.yaml  roadmap_fixture.yaml
src/assembly/mrs_bringup/include/mrs_bringup/: startup_check_node.hpp
src/assembly/mrs_bringup/launch/: _common.launch.py  isaac.launch.py  pysim.launch.py
src/assembly/mrs_bringup/src/: main.cpp  startup_check_node.cpp
src/assembly/mrs_sim_pysim/: package.xml  setup.cfg  setup.py
src/assembly/mrs_sim_pysim/mrs_sim_pysim/: kinematics.py  pysim_backend_node.py  time_guard.py
src/assembly/mrs_sim_pysim/test/: test_placeholder.py
src/contracts/mrs_core_types/: CMakeLists.txt  package.xml
src/contracts/mrs_core_types/include/mrs/: contract_types.hpp  startup_checks.hpp  view_ids.hpp
src/contracts/mrs_core_types/test/negative/: view_ids_negative.cpp
src/contracts/mrs_core_types/test/unit/: test_contract_types.cpp  test_startup_checks.cpp  test_view_ids.cpp
src/contracts/mrs_interfaces/: CMakeLists.txt  package.xml
src/contracts/mrs_interfaces/msg/: CommitState.msg  CommitStatus.msg  CorridorFlipEvent.msg  EscalationReport.msg  ExecutionWindow.msg  FrozenOrder.msg  JudgeVerdict.msg  LocalPlanShare.msg  NodeMapping.msg  ObservationUncertainty.msg  PlanRequestEntry.msg  PlanTick.msg  PlannedPaths.msg  Pose2D.msg  PredecessorConstraint.msg  RoadmapEdge.msg  RoadmapNode.msg  RobotPath.msg  RobotState.msg  RungEvent.msg  SimCapabilities.msg  SimMetricSample.msg  TaskAssignment.msg  TimedNodeVisit.msg  ViewScope.msg  WindowSegment.msg
src/contracts/mrs_interfaces/srv/: GetDependencySkeleton.srv  GetRoadmap.srv  GetUniformView.srv  PartialReplan.srv  PlanPaths.srv  ReassignRequest.srv  ReorderPassing.srv  SimInject.srv  SimQueryCapabilities.srv  SimStep.srv  TransformNode.srv  ValidateMap.srv
src/convert/mrs_msg_convert/: CMakeLists.txt  package.xml
src/convert/mrs_msg_convert/include/mrs_msg_convert/: common_convert.hpp  convert_result.hpp  msg_convert.hpp
src/convert/mrs_msg_convert/src/: common_convert.cpp  core_seam_convert.cpp  judge_convert.cpp  local_traj_convert.cpp  map_registry_convert.cpp  metrics_convert.cpp  sim_convert.cpp  task_and_reorder_convert.cpp
src/convert/mrs_msg_convert/test/unit/: convert_test_fixtures.hpp  (+5 more)
src/domain/mrs_depgraph/: CMakeLists.txt  package.xml
src/domain/mrs_depgraph/src/: dependency_graph.cpp
src/domain/mrs_judge/: CMakeLists.txt  package.xml
src/domain/mrs_judge/src/: slack_recursion_estimator.cpp
src/domain/mrs_ladder/: CMakeLists.txt  package.xml
src/domain/mrs_ladder/src/: ladder_state_machine.cpp
src/domain/mrs_local_traj/: CMakeLists.txt  package.xml
src/domain/mrs_local_traj/src/: neighbor_freshness_tracker.cpp  shift_operator.cpp
src/domain/mrs_map_registry/: CMakeLists.txt  package.xml
src/domain/mrs_map_registry/src/: map_registry.cpp  map_registry_coords.cpp  map_registry_impl.hpp  map_registry_ingest.cpp  map_registry_loader.cpp  map_registry_subdivision.cpp  map_registry_validators.cpp
src/domain/mrs_reorder_btpg/: CMakeLists.txt  package.xml
src/domain/mrs_reorder_btpg/src/: btpg_attempt_tracker.cpp
src/domain/mrs_reorder_milp/: CMakeLists.txt  package.xml
src/domain/mrs_reorder_milp/src/: milp_job_tracker.cpp
src/domain/mrs_sim_abstraction/: CMakeLists.txt  package.xml
src/domain/mrs_sim_abstraction/src/: fake_sim_backend.cpp  sim_backend_registry.cpp
src/domain/mrs_task_alloc/: CMakeLists.txt  package.xml
src/domain/mrs_task_alloc/src/: lifelong_task_allocator.cpp
src/ros/mrs_ros_comms_emul/: CMakeLists.txt  package.xml
src/ros/mrs_ros_comms_emul/src/: comms_emul_node.cpp  main.cpp
src/ros/mrs_ros_l4/: CMakeLists.txt  package.xml
src/ros/mrs_ros_l4/src/: local_traj_node.cpp  main.cpp  tracer_follower.cpp
src/ros/mrs_ros_ladder/: CMakeLists.txt  package.xml
src/ros/mrs_ros_ladder/src/: ladder_orchestrator_node.cpp  main.cpp
(+98 files in other folders)
