<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mrs_depgraph</name>
  <version>0.1.0</version>
  <description>ADG/SADG 자료구조, 실행 창 릴리스 로직, splice(접합) 무결성 검사(T2 A1~A9), window_valid_until 실효 (D-05, D-03). ROS 무의존(architecture C1).</description>
  <maintainer email="hchju23257@gmail.com">Changju Hwang</maintainer>
  <license>TBD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>mrs_core_types</depend>
  <depend>mrs_map_registry</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
