<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mrs_judge</name>
  <version>0.1.0</version>
  <description>ADG slack 재귀 추정, R2↔R3 단일 경계 승격 판정, G-eps 수용 가드 (D-06, theory T3). IJudgePolicy(seam f) 포트 소유. ROS 무의존(C1). mrs_reorder_btpg 의 참조 대상 아님(D-04 v2).</description>
  <maintainer email="hchju23257@gmail.com">Changju Hwang</maintainer>
  <license>TBD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>mrs_core_types</depend>
  <depend>mrs_depgraph</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
