<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mrs_ladder</name>
  <version>0.1.0</version>
  <description>R0-&gt;R5 상태기계, 이원 트리거 라우팅(HARD/SOFT), 왕복/핑퐁 감지, G-eps 가드 하 조건부 종료성 (D-08, theory T3). ladder 는 judge/btpg 를 참조하지 않는다 — 판정을 값(msg)으로만 받는다(architecture §2.3). ROS 무의존(C1).</description>
  <maintainer email="hchju23257@gmail.com">Changju Hwang</maintainer>
  <license>TBD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>mrs_core_types</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
