<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mrs_local_traj</name>
  <version>0.1.0</version>
  <description>diff-drive corridor QP 정식화, IQpSolver(seam b)·ILocalPlanner 포트 소유, 시프트 연산자 S(T1-R3), solve_ok(h) 술어, 이웃 신선도 추적기, 근접 게이팅 (D-07, D-05, theory T1/T4). ROS 무의존(C1).</description>
  <maintainer email="hchju23257@gmail.com">Changju Hwang</maintainer>
  <license>TBD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>mrs_core_types</depend>
  <depend>mrs_map_registry</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
