<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mrs_reorder_btpg</name>
  <version>0.1.0</version>
  <description>BTPG 양방향 쌍 구성 (R1, D-04). 시도횟수/개선폭 게이팅 카운터. IGatingPolicy(seam e)· IReorderR1 포트 소유. mrs_judge 의존 금지(D-04 v2 독립성, CI 검사). ROS 무의존(C1).</description>
  <maintainer email="hchju23257@gmail.com">Changju Hwang</maintainer>
  <license>TBD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>mrs_core_types</depend>
  <depend>mrs_depgraph</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
