<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mrs_task_alloc</name>
  <version>0.1.0</version>
  <description>min-cost-flow 기반 분리형 lifelong TA, aging, 쿨다운, 이력 페널티, R5 승격 판정 (D-02). OR-tools 링크는 로드맵 [4] 로 이연(design-decision v5 build_policy) — 지금은 포트만. ROS 무의존(C1).</description>
  <maintainer email="hchju23257@gmail.com">Changju Hwang</maintainer>
  <license>TBD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>mrs_core_types</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
